// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetailScreen > matches snapshot for regular project 1`] = `
<div
  style="height: 100%; display: flex; flex-direction: column; transition: all 0.3s ease;"
>
  <div
    style="display: flex; align-items: center; gap: 10px; flex-wrap: wrap; margin-bottom: 14px; padding-bottom: 12px; border-bottom: 1px solid rgba(224, 255, 0, 0.133);"
  >
    <div
      aria-label="Back to project list"
      class="btn-cabinet"
      role="button"
      style="font-size: 12px; color: var(--cab-text); padding: 3px 7px; border-radius: 4px; background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.06);"
      tabindex="0"
    >
      ◄
    </div>
    <div
      style="font-size: 20px; color: rgb(224, 255, 0);"
    >
      ☀
    </div>
    <div
      style="flex: 1 1 0%;"
    >
      <h1
        class="signage"
        style="font-family: "Press Start 2P", monospace; font-size: 16px; font-weight: 400; color: rgb(224, 255, 0); letter-spacing: var(--track-pixel); margin: 0px;"
      >
        MENTL
      </h1>
      <div
        style="font-size: 10px; color: var(--cab-text); letter-spacing: var(--track-ui); margin-top: 3px;"
      >
        SELF-HOSTING COMPILER
      </div>
    </div>
    <div
      class="readout-rail"
      style="display: flex; align-items: center; gap: 12px; margin-left: auto; flex-shrink: 0;"
    >
      <a
        aria-current="true"
        class="chip"
        href="https://github.com/ampactor-labs/mentl"
        rel="noopener noreferrer"
        style="font-size: 10px; letter-spacing: var(--track-ui); text-decoration: none; padding: 5px 12px; border-radius: 4px; white-space: nowrap; font-weight: 600; color: rgb(224, 255, 0); background: rgba(224, 255, 0, 0.067); border: 1px solid rgba(224, 255, 0, 0.333); box-shadow: 0 0 0 2px var(--cab-void), 0 0 0 4px #E0FF00, 0 0 18px #E0FF0099; transition: box-shadow 0.15s ease;"
        target="_blank"
      >
        › SOURCE
      </a>
    </div>
  </div>
  <div
    aria-label="Readout"
    role="region"
    style="flex: 1 1 0%; overflow: auto; position: relative;"
    tabindex="0"
  >
    <span
      style="position: absolute; right: 6px; top: 50%; transform: rotate(90deg); transform-origin: right center; white-space: nowrap; font-family: "Press Start 2P"; font-size: 8px; letter-spacing: var(--track-pixel); color: rgba(224, 255, 0, 0.04); pointer-events: none; user-select: none;"
    >
      THE COMPILER BOOTSTRAPS ITSELF
    </span>
    <div
      style="margin-bottom: 14px; font-size: 13px; line-height: 1.5; color: rgb(224, 255, 0); font-weight: 600; max-width: 520px;"
    >
      A programming language and self-hosting compiler with an algebraic effect system that compiles to WebAssembly.
    </div>
    <div
      style="margin-bottom: 14px; padding: 10px 12px; border-radius: 4px; background: rgba(224, 255, 0, 0.02); border: 1px solid rgba(224, 255, 0, 0.04);"
    >
      <div
        class="sign"
      >
        <span
          style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
        >
          SYS/READOUT
        </span>
        <div
          aria-hidden="true"
          class="sunset"
        />
      </div>
      <div
        style="font-size: 11px; line-height: 1.75; color: var(--cab-text); max-width: 520px;"
      >
        <span
          style="color: rgb(224, 255, 0);"
        >
          &gt; 
        </span>
        A programming language and self-hosting compiler with an algebraic effect system that compiles to WebAssembly. An effect is something a function does besides return a value, such as allocating or printing, and each function's type lists them. A negated effect such as !Network is a claim the compiler proves through every call, or it refuses to build. The compiler is written in Mentl: the pinned binary in boot/ compiles src/ and lib/ into a compiler that reproduces it byte for byte, and that fixed point is the release.
      </div>
    </div>
    <div
      style="display: flex; flex-direction: row; gap: 14px; margin-bottom: 14px;"
    >
      <div
        style="flex: 1 1 0%;"
      >
        <div
          class="sign"
        >
          <span
            style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
          >
            SPECIFICATIONS
          </span>
          <div
            aria-hidden="true"
            class="sunset"
          />
        </div>
        <div
          style="font-size: 10px; color: var(--cab-text); line-height: 1.8; letter-spacing: var(--track-display);"
        >
          <span
            style="color: rgba(224, 255, 0, 0.533);"
          >
            &gt;&gt; 
          </span>
          BYTE-IDENTICAL SELF-COMPILE, EVERY PIN
        </div>
        <div
          style="font-size: 10px; color: var(--cab-text); line-height: 1.8; letter-spacing: var(--track-display);"
        >
          <span
            style="color: rgba(224, 255, 0, 0.533);"
          >
            &gt;&gt; 
          </span>
          FULL EFFECT ALGEBRA (+, -, &, !, Pure)
        </div>
        <div
          style="font-size: 10px; color: var(--cab-text); line-height: 1.8; letter-spacing: var(--track-display);"
        >
          <span
            style="color: rgba(224, 255, 0, 0.533);"
          >
            &gt;&gt; 
          </span>
          SELF-HOSTED: MENTL COMPILES MENTL
        </div>
        <div
          style="font-size: 10px; color: var(--cab-text); line-height: 1.8; letter-spacing: var(--track-display);"
        >
          <span
            style="color: rgba(224, 255, 0, 0.533);"
          >
            &gt;&gt; 
          </span>
          ONE GRAPH, ONE WRITER: INFERENCE
        </div>
        <div
          style="font-size: 10px; color: var(--cab-text); line-height: 1.8; letter-spacing: var(--track-display);"
        >
          <span
            style="color: rgba(224, 255, 0, 0.533);"
          >
            &gt;&gt; 
          </span>
          ROW-POLYMORPHIC TYPE SYSTEM
        </div>
        <div
          style="font-size: 10px; color: var(--cab-text); line-height: 1.8; letter-spacing: var(--track-display);"
        >
          <span
            style="color: rgba(224, 255, 0, 0.533);"
          >
            &gt;&gt; 
          </span>
          WASM CODEGEN · 149 MICROS · 62 CRUCIBLES
        </div>
      </div>
      <div
        style="min-width: 90px;"
      >
        <div
          class="sign"
        >
          <span
            style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
          >
            STACK
          </span>
          <div
            aria-hidden="true"
            class="sunset"
          />
        </div>
        <div
          style="display: flex; flex-wrap: wrap; gap: 4px;"
        >
          <span
            style="font-family: var(--font-body); font-size: 9px; padding: 2px 7px; border-radius: 3px; background: rgba(224, 255, 0, 0.082); border: 1px solid rgba(224, 255, 0, 0.19); color: rgba(224, 255, 0, 0.8); letter-spacing: var(--track-display);"
          >
            WASM
          </span>
          <span
            style="font-family: var(--font-body); font-size: 9px; padding: 2px 7px; border-radius: 3px; background: rgba(224, 255, 0, 0.082); border: 1px solid rgba(224, 255, 0, 0.19); color: rgba(224, 255, 0, 0.8); letter-spacing: var(--track-display);"
          >
            WAT
          </span>
          <span
            style="font-family: var(--font-body); font-size: 9px; padding: 2px 7px; border-radius: 3px; background: rgba(224, 255, 0, 0.082); border: 1px solid rgba(224, 255, 0, 0.19); color: rgba(224, 255, 0, 0.8); letter-spacing: var(--track-display);"
          >
            Hindley-Milner
          </span>
          <span
            style="font-family: var(--font-body); font-size: 9px; padding: 2px 7px; border-radius: 3px; background: rgba(224, 255, 0, 0.082); border: 1px solid rgba(224, 255, 0, 0.19); color: rgba(224, 255, 0, 0.8); letter-spacing: var(--track-display);"
          >
            row polymorphism
          </span>
        </div>
      </div>
    </div>
    <div
      style="margin-bottom: 14px; padding: 8px 12px; border-radius: 4px; background: rgba(224, 255, 0, 0.024); border-width: 1px 1px 1px 3px; border-style: solid; border-color: rgba(224, 255, 0, 0.082) rgba(224, 255, 0, 0.082) rgba(224, 255, 0, 0.082) rgba(224, 255, 0, 0.25); border-image: none;"
    >
      <div
        class="sign"
      >
        <span
          style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
        >
          OPERATOR NOTES
        </span>
        <div
          aria-hidden="true"
          class="sunset"
        />
      </div>
      <div
        style="font-size: 10px; line-height: 1.75; color: var(--cab-text); font-style: italic; max-width: 520px;"
      >
        The verifier is sound and incomplete: a claim it cannot decide is recorded as pending debt, reported at compile time, and the program still builds. The absence proof !E is keyed by effect name, its soundness under polymorphism is an open item (PLAN.md §4③), and on the compiler's own source an effect operation with no handler installed anywhere still compiled with zero diagnostics (PLAN.md §7). The compiler emits WebAssembly only and runs through the bundled Rust host; there is no published package, and no CI service runs the gates.
      </div>
    </div>
    <div
      style="display: flex; align-items: center; gap: 10px; margin-bottom: 14px; flex-wrap: wrap;"
    >
      <span
        style="font-family: var(--font-body); font-size: 10px; color: var(--cab-ok);"
      >
        ●
         
        ACTIVE
      </span>
      <span
        style="color: var(--cab-faint); font-size: 10px;"
      >
        │
      </span>
      <div
        style="display: flex; flex-wrap: wrap; gap: 4px;"
      >
        <span
          style="font-family: var(--font-body); font-size: 8px; padding: 2px 6px; border-radius: 3px; background: rgba(224, 255, 0, 0.04); border: 1px solid rgba(224, 255, 0, 0.125); color: rgba(224, 255, 0, 0.667); letter-spacing: var(--track-display);"
        >
          compiler
        </span>
        <span
          style="font-family: var(--font-body); font-size: 8px; padding: 2px 6px; border-radius: 3px; background: rgba(224, 255, 0, 0.04); border: 1px solid rgba(224, 255, 0, 0.125); color: rgba(224, 255, 0, 0.667); letter-spacing: var(--track-display);"
        >
          effects
        </span>
        <span
          style="font-family: var(--font-body); font-size: 8px; padding: 2px 6px; border-radius: 3px; background: rgba(224, 255, 0, 0.04); border: 1px solid rgba(224, 255, 0, 0.125); color: rgba(224, 255, 0, 0.667); letter-spacing: var(--track-display);"
        >
          self-hosting
        </span>
        <span
          style="font-family: var(--font-body); font-size: 8px; padding: 2px 6px; border-radius: 3px; background: rgba(224, 255, 0, 0.04); border: 1px solid rgba(224, 255, 0, 0.125); color: rgba(224, 255, 0, 0.667); letter-spacing: var(--track-display);"
        >
          wasm
        </span>
      </div>
    </div>
  </div>
  <div
    style="font-family: var(--font-body); padding-top: 10px; border-top: 1px solid rgba(224, 255, 0, 0.067); font-size: 8px; color: var(--cab-muted); display: flex; justify-content: space-between;"
  >
    <span>
      [ 
      Ⓑ
       BACK ]
    </span>
    <a
      href="https://github.com/ampactor-labs/mentl"
      rel="noopener noreferrer"
      style="color: rgba(224, 255, 0, 0.667); text-decoration: underline; text-underline-offset: 3px;"
      target="_blank"
    >
      ampactor-labs/mentl
    </a>
  </div>
</div>
`;

exports[`DetailScreen > matches snapshot for synth project 1`] = `
<div
  style="height: 100%; display: flex; flex-direction: column; transition: all 0.3s ease;"
>
  <div
    style="display: flex; align-items: center; gap: 10px; flex-wrap: wrap; margin-bottom: 14px; padding-bottom: 12px; border-bottom: 1px solid rgba(255, 184, 0, 0.133);"
  >
    <div
      aria-label="Back to project list"
      class="btn-cabinet"
      role="button"
      style="font-size: 12px; color: var(--cab-text); padding: 3px 7px; border-radius: 4px; background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.06);"
      tabindex="0"
    >
      ◄
    </div>
    <div
      style="font-size: 20px; color: rgb(255, 184, 0);"
    >
      ∿
    </div>
    <div
      style="flex: 1 1 0%;"
    >
      <h1
        class="signage"
        style="font-family: "Press Start 2P", monospace; font-size: 16px; font-weight: 400; color: rgb(255, 184, 0); letter-spacing: var(--track-pixel); margin: 0px;"
      >
        SYS/RESONANCE
      </h1>
      <div
        style="font-size: 10px; color: var(--cab-text); letter-spacing: var(--track-ui); margin-top: 3px;"
      >
        SUBTRACTIVE SYNTH
      </div>
    </div>
  </div>
  <div
    aria-label="Readout"
    role="region"
    style="flex: 1 1 0%; overflow: auto; position: relative;"
    tabindex="0"
  >
    <span
      style="position: absolute; right: 6px; top: 50%; transform: rotate(90deg); transform-origin: right center; white-space: nowrap; font-family: "Press Start 2P"; font-size: 8px; letter-spacing: var(--track-pixel); color: rgba(255, 184, 0, 0.04); pointer-events: none; user-select: none;"
    >
      THE CHAIN SPEAKS
    </span>
    <div
      style="margin-bottom: 14px; padding: 10px 12px; border-radius: 4px; background: rgba(255, 184, 0, 0.02); border: 1px solid rgba(255, 184, 0, 0.04);"
    >
      <div
        class="sign"
      >
        <span
          style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
        >
          SYS/READOUT
        </span>
        <div
          aria-hidden="true"
          class="sunset"
        />
      </div>
      <div
        style="font-size: 11px; line-height: 1.75; color: var(--cab-text); max-width: 520px;"
      >
        <span
          style="color: rgb(255, 184, 0);"
        >
          &gt; 
        </span>
        Playable single-voice subtractive synthesizer. Oscillator → Filter → Amp → Delay. Keyboard-mapped. The signal chain, alive in the browser.
      </div>
    </div>
    <div
      style="display: flex; flex-direction: row; gap: 14px; margin-bottom: 14px;"
    >
      <div
        style="flex: 1 1 0%;"
      >
        <div
          class="sign"
        >
          <span
            style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
          >
            SPECIFICATIONS
          </span>
          <div
            aria-hidden="true"
            class="sunset"
          />
        </div>
        <div
          style="font-size: 10px; color: var(--cab-text); line-height: 1.8; letter-spacing: var(--track-display);"
        >
          <span
            style="color: rgba(255, 184, 0, 0.533);"
          >
            &gt;&gt; 
          </span>
          OSC → FILTER → AMP → DELAY
        </div>
        <div
          style="font-size: 10px; color: var(--cab-text); line-height: 1.8; letter-spacing: var(--track-display);"
        >
          <span
            style="color: rgba(255, 184, 0, 0.533);"
          >
            &gt;&gt; 
          </span>
          KEYBOARD MAPPED
        </div>
        <div
          style="font-size: 10px; color: var(--cab-text); line-height: 1.8; letter-spacing: var(--track-display);"
        >
          <span
            style="color: rgba(255, 184, 0, 0.533);"
          >
            &gt;&gt; 
          </span>
          REAL-TIME PARAMETER CONTROL
        </div>
        <div
          style="font-size: 10px; color: var(--cab-text); line-height: 1.8; letter-spacing: var(--track-display);"
        >
          <span
            style="color: rgba(255, 184, 0, 0.533);"
          >
            &gt;&gt; 
          </span>
          WEB AUDIO SYNTHESIS
        </div>
        <div
          style="font-size: 10px; color: var(--cab-text); line-height: 1.8; letter-spacing: var(--track-display);"
        >
          <span
            style="color: rgba(255, 184, 0, 0.533);"
          >
            &gt;&gt; 
          </span>
          SUBTRACTIVE SIGNAL CHAIN
        </div>
        <div
          style="font-size: 10px; color: var(--cab-text); line-height: 1.8; letter-spacing: var(--track-display);"
        >
          <span
            style="color: rgba(255, 184, 0, 0.533);"
          >
            &gt;&gt; 
          </span>
          PLAYABLE IN BROWSER
        </div>
      </div>
      <div
        style="min-width: 90px;"
      >
        <div
          class="sign"
        >
          <span
            style="font-family: "Press Start 2P", monospace; font-size: 8px; color: var(--cab-muted); letter-spacing: var(--track-pixel); white-space: nowrap;"
          >
            STACK
          </span>
          <div
            aria-hidden="true"
            class="sunset"
          />
        </div>
        <div
          style="display: flex; flex-wrap: wrap; gap: 4px;"
        >
          <span
            style="font-family: var(--font-body); font-size: 9px; padding: 2px 7px; border-radius: 3px; background: rgba(255, 184, 0, 0.082); border: 1px solid rgba(255, 184, 0, 0.19); color: rgba(255, 184, 0, 0.8); letter-spacing: var(--track-display);"
          >
            Web Audio API
          </span>
          <span
            style="font-family: var(--font-body); font-size: 9px; padding: 2px 7px; border-radius: 3px; background: rgba(255, 184, 0, 0.082); border: 1px solid rgba(255, 184, 0, 0.19); color: rgba(255, 184, 0, 0.8); letter-spacing: var(--track-display);"
          >
            React
          </span>
          <span
            style="font-family: var(--font-body); font-size: 9px; padding: 2px 7px; border-radius: 3px; background: rgba(255, 184, 0, 0.082); border: 1px solid rgba(255, 184, 0, 0.19); color: rgba(255, 184, 0, 0.8); letter-spacing: var(--track-display);"
          >
            keyboard events
          </span>
        </div>
      </div>
    </div>
    <div
      style="display: flex; align-items: center; gap: 10px; margin-bottom: 14px; flex-wrap: wrap;"
    >
      <span
        style="font-family: var(--font-body); font-size: 10px; color: var(--cab-quiet);"
      >
        ●
         
        INTERACTIVE
      </span>
      <span
        style="color: var(--cab-faint); font-size: 10px;"
      >
        │
      </span>
      <div
        style="display: flex; flex-wrap: wrap; gap: 4px;"
      >
        <span
          style="font-family: var(--font-body); font-size: 8px; padding: 2px 6px; border-radius: 3px; background: rgba(255, 184, 0, 0.04); border: 1px solid rgba(255, 184, 0, 0.125); color: rgba(255, 184, 0, 0.667); letter-spacing: var(--track-display);"
        >
          oscillator
        </span>
        <span
          style="font-family: var(--font-body); font-size: 8px; padding: 2px 6px; border-radius: 3px; background: rgba(255, 184, 0, 0.04); border: 1px solid rgba(255, 184, 0, 0.125); color: rgba(255, 184, 0, 0.667); letter-spacing: var(--track-display);"
        >
          filter
        </span>
        <span
          style="font-family: var(--font-body); font-size: 8px; padding: 2px 6px; border-radius: 3px; background: rgba(255, 184, 0, 0.04); border: 1px solid rgba(255, 184, 0, 0.125); color: rgba(255, 184, 0, 0.667); letter-spacing: var(--track-display);"
        >
          envelope
        </span>
        <span
          style="font-family: var(--font-body); font-size: 8px; padding: 2px 6px; border-radius: 3px; background: rgba(255, 184, 0, 0.04); border: 1px solid rgba(255, 184, 0, 0.125); color: rgba(255, 184, 0, 0.667); letter-spacing: var(--track-display);"
        >
          delay
        </span>
      </div>
    </div>
  </div>
  <div
    style="font-family: var(--font-body); padding-top: 10px; border-top: 1px solid rgba(255, 184, 0, 0.067); font-size: 8px; color: var(--cab-muted); display: flex; justify-content: space-between;"
  >
    <span>
      [ 
      Ⓑ
       BACK ]
    </span>
    <span>
      resonance
    </span>
  </div>
</div>
`;
